
-------------------------------------------------------------------------------

Sat Oct 30 15:02:57 PDT 1999
(Mandrake)

eConfig is about to start taking shape.  starting to begin building the base
system now

-------------------------------------------------------------------------------

Sat Oct 30 15:35:49 PDT 1999
(Mandrake)

a couple of minor API changes.  the API is the important bit people should pay
attention to.  the rest of it isn't as important (but I'm should have a
preliminary beta out today/tomorrow)

-------------------------------------------------------------------------------

Sat Oct 30 16:55:30 PDT 1999
(Mandrake)

Still trying to make the API sane

-------------------------------------------------------------------------------

Sat Oct 30 17:19:36 PDT 1999
(Mandrake)

API editing (slightly).  I have a question - how portable is using time_t?
Anyone care to take that one?  time_t in a file, that is.  I want to be able to
store the last modification date of something NOT as a string.

-------------------------------------------------------------------------------

Sat Oct 30 18:31:02 PDT 1999
(Mandrake)

eConfigGetData() is starting to take shape now - we just have to figure out
what to do about these binary timestamps

-------------------------------------------------------------------------------

Sat Oct 30 20:07:13 PDT 1999
(Mandrake)

adding some comments here and there as I go.  going to try to "Do the Right
Thing" from the ground up this time.

-------------------------------------------------------------------------------

Sat Oct 30 23:20:26 PDT 1999
(Mandrake)

thanks to Hans Lofving <hans.316@brfmasthugget.se> for pointing out that I had
part of my internal API backwards.  Luckily we could repair that :)

-------------------------------------------------------------------------------

Sun Oct 31 12:24:17 PST 1999
(Mandrake)

committing what I did last night before I went to bed.  I don't remember what
this does